# hermes-skills-mcp-server

./: README.md  REQUIREMENTS.md  main.py  pyproject.toml
examples/sample-skill/: SKILL.md
examples/sample-skill/references/: example-reference.md
src/hermes_skills_mcp_server/: __init__.py  server.py
