[project]
name = "hermes-skills-mcp-server"
version = "0.1.0"
description = "MCP server exposing Hermes-style skills_list, skill_view, and skill_manage tools. Compatible with OpenClaw, Hermes, Claude Desktop, Cursor and other MCP clients. Uses the standard SKILL.md (agentskills.io) format."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
hermes-skills-mcp = "hermes_skills_mcp_server.server:main"

[tool.uv]
dev-dependencies = []
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_skills_mcp_server"]
