[project]
name = "agent-skills-mcp-server"
version = "0.1.0"
description = "Standalone MCP server exposing skills_list, skill_view, and skill_manage using the SKILL.md format. Works in pure OpenClaw (no Hermes required). Auto-detects OpenClaw workspace/skills locations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
agent-skills-mcp = "hermes_skills_mcp_server.server:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_skills_mcp_server"]